kubernetes/opensearch/ingress-dashboard.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-opensearch-dashboard
spec:
  rules:
  - host: kibana.doitsu.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:	opensearch-dashboard-opensearch-dashboards
            port:
              number: 5601
