kubernetes/opensearch/opensearch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-opensearch
spec:
  rules:
  - host: elasticserver.doitsu.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opensearch-cluster-master
            port:
              number: 9200
  - host: kibana.doitsu.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:	opensearch-dashboard-opensearch-dashboards
            port:
              number: 5601
